Đầu tháng 8 comeback :(

--- a/Enchantments/.settings/org.eclipse.core.resources.prefs
+++ b/Enchantments/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/me/mavis/main/InventoryListener.java=UTF-8
 encoding//src/me/mavis/plugins/CommandCuongHoa.java=UTF-8
+encoding//src/me/mavis/plugins/CommandShop.java=UTF-8
